# bcspin

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
artifacts/: fraud_detection_model_20250727_233143.pkl  fraud_detection_model_latest.pkl  metadata.pkl  model_20250727_233143.pkl
examples/: __init__.py  api_client.py  request_example.json  sample_input.json
sproxxo/: __init__.py  config.py
sproxxo/api/: __init__.py  main.py
sproxxo/models/: __init__.py  fraud_detector.py  model_manager.py
sproxxo/monitoring/: __init__.py  logging.py
sproxxo/training/: __init__.py  train.py
sproxxo/utils/: __init__.py  data_generator.py  validators.py
tests/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_api_validation.py  test_config.py  test_data_generator.py  test_models.py
